<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <include layout="@layout/activity_toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/lady1_photo"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:src="@drawable/lady1" />

        <TextView
            android:id="@+id/data1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="end"
            android:text="@string/data1"
            android:textColor="@android:color/darker_gray"
            android:textSize="17dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/lady1_photo"
            android:layout_toRightOf="@id/lady1_photo"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingStart="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lady_first_name"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/cmi_e4a9e97c"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:text="@string/lady1_message"
                android:textColor="@android:color/darker_gray"
                android:textSize="17sp" />

        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/group1"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:src="@drawable/group1" />

        <TextView
            android:id="@+id/data2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="end"
            android:text="@string/data2"
            android:textColor="@android:color/darker_gray"
            android:textSize="17dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/group1"
            android:layout_toRightOf="@id/group1"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingStart="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/group1_name"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/group2"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:text="@string/group2_message"
                android:textColor="@android:color/darker_gray"
                android:textSize="17sp" />

        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/princess"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:src="@drawable/princess1" />

        <TextView
            android:id="@+id/data3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="end"
            android:text="@string/data3"
            android:textColor="@android:color/darker_gray"
            android:textSize="17dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/princess"
            android:layout_toRightOf="@id/princess"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingStart="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/princess"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/cmi_e4a9e97c"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:text="@string/numbers"
                android:textColor="@android:color/darker_gray"
                android:textSize="17sp" />

        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/inna"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:src="@drawable/inna" />

        <TextView
            android:id="@+id/data4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="end"
            android:text="@string/data4"
            android:textColor="@android:color/darker_gray"
            android:textSize="17dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/inna"
            android:layout_toRightOf="@id/inna"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingStart="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/inna"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/cmi_e4a9e97c"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:text="@string/inna_message"
                android:textColor="@android:color/darker_gray"
                android:textSize="17sp" />

        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/number"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:src="@drawable/number27" />

        <TextView
            android:id="@+id/data5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="end"
            android:text="@string/text5"
            android:textColor="@android:color/darker_gray"
            android:textSize="17dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/number"
            android:layout_toRightOf="@id/number"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingStart="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/number_message"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/doggy"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:text="@string/number_message2"
                android:textColor="@android:color/darker_gray"
                android:textSize="17sp" />

        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/slava"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:src="@drawable/slav" />

        <TextView
            android:id="@+id/data6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="end"
            android:text="@string/data6"
            android:textColor="@android:color/darker_gray"
            android:textSize="17dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/slava"
            android:layout_toRightOf="@id/slava"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingStart="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/slavinka_stepanenko"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/cmi_e4a9e97c"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:text="@string/slava_message"
                android:textColor="@android:color/darker_gray"
                android:textSize="17sp" />

        </LinearLayout>


    </RelativeLayout>


</LinearLayout>


